--- a/enums/requestcontenttypes.html
+++ b/enums/requestcontenttypes.html
@@ -95,7 +95,7 @@
 					<div class="tsd-signature tsd-kind-icon">FORM<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/e55d3cc/src/enums/http-apis.ts#L23">enums/http-apis.ts:23</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/enums/http-apis.ts#L23">enums/http-apis.ts:23</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -105,7 +105,7 @@
 					<div class="tsd-signature tsd-kind-icon">IMAGE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;image/jpg, image/png&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/e55d3cc/src/enums/http-apis.ts#L21">enums/http-apis.ts:21</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/enums/http-apis.ts#L21">enums/http-apis.ts:21</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -115,7 +115,7 @@
 					<div class="tsd-signature tsd-kind-icon">JSON<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;application/json&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/e55d3cc/src/enums/http-apis.ts#L22">enums/http-apis.ts:22</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/enums/http-apis.ts#L22">enums/http-apis.ts:22</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -226,6 +226,18 @@
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="../modules.html#isbrowser" class="tsd-kind-icon">is<wbr>Browser</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="../modules.html#m_constants_name" class="tsd-kind-icon">m_<wbr>constants_<wbr>name</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="../modules.html#m_enums_name" class="tsd-kind-icon">m_<wbr>enums_<wbr>name</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="../modules.html#m_interfaces_name" class="tsd-kind-icon">m_<wbr>interfaces_<wbr>name</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="../modules.html#m_types_name" class="tsd-kind-icon">m_<wbr>types_<wbr>name</a>
 					</li>
 					<li class=" tsd-kind-function">
 						<a href="../modules.html#noop" class="tsd-kind-icon">NOOP</a>
