--- a/enums/requestmethod.html
+++ b/enums/requestmethod.html
@@ -97,7 +97,7 @@
 					<div class="tsd-signature tsd-kind-icon">DELETE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;DELETE&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/e55d3cc/src/enums/http-apis.ts#L14">enums/http-apis.ts:14</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/enums/http-apis.ts#L14">enums/http-apis.ts:14</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -107,7 +107,7 @@
 					<div class="tsd-signature tsd-kind-icon">GET<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;GET&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/e55d3cc/src/enums/http-apis.ts#L10">enums/http-apis.ts:10</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/enums/http-apis.ts#L10">enums/http-apis.ts:10</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -117,7 +117,7 @@
 					<div class="tsd-signature tsd-kind-icon">PATCH<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;PATCH&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/e55d3cc/src/enums/http-apis.ts#L13">enums/http-apis.ts:13</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/enums/http-apis.ts#L13">enums/http-apis.ts:13</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -127,7 +127,7 @@
 					<div class="tsd-signature tsd-kind-icon">POST<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;POST&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/e55d3cc/src/enums/http-apis.ts#L11">enums/http-apis.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/enums/http-apis.ts#L11">enums/http-apis.ts:11</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -137,7 +137,7 @@
 					<div class="tsd-signature tsd-kind-icon">PUT<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;PUT&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/e55d3cc/src/enums/http-apis.ts#L12">enums/http-apis.ts:12</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/enums/http-apis.ts#L12">enums/http-apis.ts:12</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -254,6 +254,18 @@
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="../modules.html#isbrowser" class="tsd-kind-icon">is<wbr>Browser</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="../modules.html#m_constants_name" class="tsd-kind-icon">m_<wbr>constants_<wbr>name</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="../modules.html#m_enums_name" class="tsd-kind-icon">m_<wbr>enums_<wbr>name</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="../modules.html#m_interfaces_name" class="tsd-kind-icon">m_<wbr>interfaces_<wbr>name</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="../modules.html#m_types_name" class="tsd-kind-icon">m_<wbr>types_<wbr>name</a>
 					</li>
 					<li class=" tsd-kind-function">
 						<a href="../modules.html#noop" class="tsd-kind-icon">NOOP</a>
