--- a/index.html
+++ b/index.html
@@ -197,6 +197,18 @@
 					<li class=" tsd-kind-variable">
 						<a href="modules.html#isbrowser" class="tsd-kind-icon">is<wbr>Browser</a>
 					</li>
+					<li class=" tsd-kind-variable">
+						<a href="modules.html#m_constants_name" class="tsd-kind-icon">m_<wbr>constants_<wbr>name</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="modules.html#m_enums_name" class="tsd-kind-icon">m_<wbr>enums_<wbr>name</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="modules.html#m_interfaces_name" class="tsd-kind-icon">m_<wbr>interfaces_<wbr>name</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="modules.html#m_types_name" class="tsd-kind-icon">m_<wbr>types_<wbr>name</a>
+					</li>
 					<li class=" tsd-kind-function">
 						<a href="modules.html#noop" class="tsd-kind-icon">NOOP</a>
 					</li>
