--- a/interfaces/isize.html
+++ b/interfaces/isize.html
@@ -102,7 +102,7 @@
 					<div class="tsd-signature tsd-kind-icon">height<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/e55d3cc/src/interfaces/index.ts#L4">interfaces/index.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/interfaces/index.ts#L6">interfaces/index.ts:6</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -112,7 +112,7 @@
 					<div class="tsd-signature tsd-kind-icon">width<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/e55d3cc/src/interfaces/index.ts#L3">interfaces/index.ts:3</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/interfaces/index.ts#L5">interfaces/index.ts:5</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -220,6 +220,18 @@
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="../modules.html#isbrowser" class="tsd-kind-icon">is<wbr>Browser</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="../modules.html#m_constants_name" class="tsd-kind-icon">m_<wbr>constants_<wbr>name</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="../modules.html#m_enums_name" class="tsd-kind-icon">m_<wbr>enums_<wbr>name</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="../modules.html#m_interfaces_name" class="tsd-kind-icon">m_<wbr>interfaces_<wbr>name</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="../modules.html#m_types_name" class="tsd-kind-icon">m_<wbr>types_<wbr>name</a>
 					</li>
 					<li class=" tsd-kind-function">
 						<a href="../modules.html#noop" class="tsd-kind-icon">NOOP</a>
