--- a/modules.html
+++ b/modules.html
@@ -106,6 +106,10 @@
 								<li class="tsd-kind-variable"><a href="modules.html#truthy" class="tsd-kind-icon">TRUTHY</a></li>
 								<li class="tsd-kind-variable"><a href="modules.html#hascssvariablessupport" class="tsd-kind-icon">has<wbr>Css<wbr>Variables<wbr>Support</a></li>
 								<li class="tsd-kind-variable"><a href="modules.html#isbrowser" class="tsd-kind-icon">is<wbr>Browser</a></li>
+								<li class="tsd-kind-variable"><a href="modules.html#m_constants_name" class="tsd-kind-icon">m_<wbr>constants_<wbr>name</a></li>
+								<li class="tsd-kind-variable"><a href="modules.html#m_enums_name" class="tsd-kind-icon">m_<wbr>enums_<wbr>name</a></li>
+								<li class="tsd-kind-variable"><a href="modules.html#m_interfaces_name" class="tsd-kind-icon">m_<wbr>interfaces_<wbr>name</a></li>
+								<li class="tsd-kind-variable"><a href="modules.html#m_types_name" class="tsd-kind-icon">m_<wbr>types_<wbr>name</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
@@ -126,7 +130,7 @@
 					<div class="tsd-signature tsd-kind-icon">TArray<wbr>Filter&lt;Item&gt;<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span>item<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Item</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/e55d3cc/src/types/arrays.ts#L11">types/arrays.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/types/arrays.ts#L11">types/arrays.ts:11</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -176,7 +180,7 @@
 					<div class="tsd-signature tsd-kind-icon">TCallback&lt;Tuple, Return&gt;<span class="tsd-signature-symbol">:</span> <a href="modules.html#tfunction" class="tsd-signature-type" data-tsd-kind="Type alias">TFunction</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Tuple</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">Return</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> | </span><a href="modules.html#temptycallback" class="tsd-signature-type" data-tsd-kind="Type alias">TEmptyCallback</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/e55d3cc/src/types/functions.ts#L10">types/functions.ts:10</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/types/functions.ts#L10">types/functions.ts:10</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -200,7 +204,7 @@
 					<div class="tsd-signature tsd-kind-icon">TDOMElement<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">HTMLElement</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Document</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Window</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/e55d3cc/src/types/dom.ts#L5">types/dom.ts:5</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/types/dom.ts#L5">types/dom.ts:5</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -210,7 +214,7 @@
 					<div class="tsd-signature tsd-kind-icon">TDOMEvent<wbr>Handler&lt;EventType&gt;<span class="tsd-signature-symbol">:</span> <a href="modules.html#tfunction" class="tsd-signature-type" data-tsd-kind="Type alias">TFunction</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-symbol">[</span><span class="tsd-signature-type">EventType</span><span class="tsd-signature-symbol">]</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/e55d3cc/src/types/dom.ts#L17">types/dom.ts:17</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/types/dom.ts#L17">types/dom.ts:17</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -239,7 +243,7 @@
 					<div class="tsd-signature tsd-kind-icon">TEmpty<wbr>Callback<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">void</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/e55d3cc/src/types/functions.ts#L7">types/functions.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/types/functions.ts#L7">types/functions.ts:7</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -269,7 +273,7 @@
 					<div class="tsd-signature tsd-kind-icon">TFunction&lt;Tuple, Return&gt;<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">...</span>args<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Tuple</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">Return</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/e55d3cc/src/types/functions.ts#L2">types/functions.ts:2</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/types/functions.ts#L2">types/functions.ts:2</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -314,7 +318,7 @@
 					<div class="tsd-signature tsd-kind-icon">TJSObject&lt;T&gt;<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/e55d3cc/src/types/utils.ts#L5">types/utils.ts:5</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/types/utils.ts#L5">types/utils.ts:5</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -335,7 +339,7 @@
 					<div class="tsd-signature tsd-kind-icon">TJSValue&lt;T&gt;<span class="tsd-signature-symbol">:</span> <a href="modules.html#tjsobject" class="tsd-signature-type" data-tsd-kind="Type alias">TJSObject</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">unknown</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/e55d3cc/src/types/utils.ts#L8">types/utils.ts:8</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/types/utils.ts#L8">types/utils.ts:8</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -356,7 +360,7 @@
 					<div class="tsd-signature tsd-kind-icon">TProp<wbr>Type&lt;TObj, TProp&gt;<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">TObj</span><span class="tsd-signature-symbol">[</span><span class="tsd-signature-type">TProp</span><span class="tsd-signature-symbol">]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/e55d3cc/src/types/utils.ts#L2">types/utils.ts:2</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/types/utils.ts#L2">types/utils.ts:2</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -380,7 +384,7 @@
 					<div class="tsd-signature tsd-kind-icon">TType<wbr>Callback&lt;Return, Options&gt;<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span>options<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">Options</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">Return</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/e55d3cc/src/types/functions.ts#L15">types/functions.ts:15</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/types/functions.ts#L15">types/functions.ts:15</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -425,7 +429,7 @@
 					<div class="tsd-signature tsd-kind-icon">TWindow<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">typeof </span><span class="tsd-signature-type">window</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/e55d3cc/src/types/dom.ts#L3">types/dom.ts:3</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/types/dom.ts#L3">types/dom.ts:3</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -438,7 +442,7 @@
 					<div class="tsd-signature tsd-kind-icon">APP_<wbr>URL<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/e55d3cc/src/constants/browser.ts#L23">constants/browser.ts:23</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/constants/browser.ts#L23">constants/browser.ts:23</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -454,7 +458,7 @@
 					<div class="tsd-signature tsd-kind-icon">DEFAULT_<wbr>PAGE_<wbr>SIZE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">25</span><span class="tsd-signature-symbol"> = 25</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/e55d3cc/src/constants/default-values.ts#L1">constants/default-values.ts:1</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/constants/default-values.ts#L1">constants/default-values.ts:1</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -464,7 +468,7 @@
 					<div class="tsd-signature tsd-kind-icon">DEFAULT_<wbr>WAIT_<wbr>MILLISECONDS<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">300</span><span class="tsd-signature-symbol"> = 300</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/e55d3cc/src/constants/default-values.ts#L3">constants/default-values.ts:3</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/constants/default-values.ts#L3">constants/default-values.ts:3</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -474,7 +478,7 @@
 					<div class="tsd-signature tsd-kind-icon">FALSY<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">RegExp</span><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/e55d3cc/src/constants/expressions.ts#L23">constants/expressions.ts:23</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/constants/expressions.ts#L23">constants/expressions.ts:23</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -496,7 +500,7 @@
 					<div class="tsd-signature tsd-kind-icon">TRUTHY<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">RegExp</span><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/e55d3cc/src/constants/expressions.ts#L11">constants/expressions.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/constants/expressions.ts#L11">constants/expressions.ts:11</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -518,7 +522,7 @@
 					<div class="tsd-signature tsd-kind-icon">has<wbr>Css<wbr>Variables<wbr>Support<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/e55d3cc/src/constants/browser.ts#L11">constants/browser.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/constants/browser.ts#L11">constants/browser.ts:11</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -533,7 +537,7 @@
 					<div class="tsd-signature tsd-kind-icon">is<wbr>Browser<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/e55d3cc/src/constants/browser.ts#L6">constants/browser.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/constants/browser.ts#L6">constants/browser.ts:6</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -542,6 +546,46 @@
 						</div>
 						<p>check: <code>typeof window !== &#39;undefined&#39;;</code></p>
 					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-variable">
+					<a name="m_constants_name" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagConst">Const</span> m_<wbr>constants_<wbr>name</h3>
+					<div class="tsd-signature tsd-kind-icon">m_<wbr>constants_<wbr>name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">&quot;constants&quot;</span><span class="tsd-signature-symbol"> = &#x27;constants&#x27;</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/constants/index.ts#L1">constants/index.ts:1</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-variable">
+					<a name="m_enums_name" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagConst">Const</span> m_<wbr>enums_<wbr>name</h3>
+					<div class="tsd-signature tsd-kind-icon">m_<wbr>enums_<wbr>name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">&quot;enums&quot;</span><span class="tsd-signature-symbol"> = &#x27;enums&#x27;</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/enums/index.ts#L1">enums/index.ts:1</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-variable">
+					<a name="m_interfaces_name" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagConst">Const</span> m_<wbr>interfaces_<wbr>name</h3>
+					<div class="tsd-signature tsd-kind-icon">m_<wbr>interfaces_<wbr>name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">&quot;interfaces&quot;</span><span class="tsd-signature-symbol"> = &#x27;interfaces&#x27;</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/interfaces/index.ts#L1">interfaces/index.ts:1</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-variable">
+					<a name="m_types_name" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagConst">Const</span> m_<wbr>types_<wbr>name</h3>
+					<div class="tsd-signature tsd-kind-icon">m_<wbr>types_<wbr>name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">&quot;types&quot;</span><span class="tsd-signature-symbol"> = &#x27;types&#x27;</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/types/index.ts#L1">types/index.ts:1</a></li>
+						</ul>
+					</aside>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
@@ -556,7 +600,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/e55d3cc/src/constants/utils.ts#L16">constants/utils.ts:16</a></li>
+									<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/constants/utils.ts#L16">constants/utils.ts:16</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -578,7 +622,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/e55d3cc/src/constants/utils.ts#L13">constants/utils.ts:13</a></li>
+									<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7f8fb8b/src/constants/utils.ts#L13">constants/utils.ts:13</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -697,6 +741,18 @@
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="modules.html#isbrowser" class="tsd-kind-icon">is<wbr>Browser</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="modules.html#m_constants_name" class="tsd-kind-icon">m_<wbr>constants_<wbr>name</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="modules.html#m_enums_name" class="tsd-kind-icon">m_<wbr>enums_<wbr>name</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="modules.html#m_interfaces_name" class="tsd-kind-icon">m_<wbr>interfaces_<wbr>name</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="modules.html#m_types_name" class="tsd-kind-icon">m_<wbr>types_<wbr>name</a>
 					</li>
 					<li class=" tsd-kind-function">
 						<a href="modules.html#noop" class="tsd-kind-icon">NOOP</a>
